content/sass/pages/index.scss
@use "../variables/colors"as *;
@use "../variables/spacing"as *;
@use "../variables/type-vars"as *;
@use "../variables/misc"as *;
@use "sass:list";
@use "../components/guide.scss"as guide;
@use "../components/article.scss"as article;



// MARK: Hero
.hero {
    @include flex-center;
    position: relative;
    width: 100%;
    padding: 0;
    max-width: none;

    &__img {
        width: 100%;
        object-fit: cover;
    }

    &__title {
        position: absolute;
        width: clamp(300px, 80%, 1200px);
        text-align: center;
        color: white;
    }
}

// MARK: Actions

.grid {
    display: grid;
}

.actions {
    padding-block: var(--section-spacing-large) var(--section-spacing);
}

.actions-grid {
    width: 100%;
    @include grid-preferred-columns(4, 220px, $space-hori-xs, $space-hori-xs)
}

.action {
    display: flex;
    align-items: center;
    flex-direction: column;
    padding: 1.25em 1em;
    color: $text-color-dark;
    font-size: $fs-500;


    &__icon {
        aspect-ratio: 1;
        width: 4em;
        max-width: 120px;
        color: $text-color-dark;

        min-width: 80px;
    }

    &__title {
        text-align: center;
        margin-top: 0.75em;
        transition: $transition-clr;
        outline-offset: 4px;

        &:focus,
        &:hover {
            color: $clr-secondary;
        }

    }
}

// MARK: Articles
.articles {
    padding-block: var(--section-spacing);
}

.articles-grid {
    grid-template-columns: [main-start] repeat(3, minmax(1px, 1fr)) [main-end];
    column-gap: $space-hori-s;
    row-gap: $space-vert-s;
}

.article {
    @include article.vertical-style;

    &--main {
        grid-column-start: main-start;
        grid-column-end: main-end;
        flex-direction: row;
        @include article.horizontal-style;

    }
}

.read-more {
    $trans-dur: 300ms;

    margin-top: auto;
    align-self: flex-end;
    font-size: $fs-300;
    position: relative;
    isolation: isolate;
    transition: color $trans-dur ease;
    padding: 0.5em;

    &::after {
        content: '';
        position: absolute;
        inset: 0;
        background: $clr-secondary;
        transform-origin: left;
        transform: scaleX(0);
        z-index: -1;
        transition: transform $trans-dur ease-in-out;
    }

    &:focus,
    &:hover {
        color: white;
        outline: none;

        &::after {
            transform: scaleX(1);
        }
    }

    &:focus::before {
        content: "";
        position: absolute;
        left: 50%;
        top: 50%;
        width: 100%;
        height: 100%;
        transform: translateX(-50%) translateY(-50%);
        padding: 4px;
        box-sizing: content-box;
        outline: 3px solid $clr-secondary;
    }

}

.more-btn {
    display: block;
    width: fit-content;
    margin-left: auto;
    margin-top: 2em;
}

// MARK: Guides

.guides-bg {
    background: $clr-primary-50;
}

.guides {
    padding: var(--section-spacing-large) var(--horizontal-padding);

    .section-title {
        font-family: 'Lora';
        text-align: center;
        font-style: italic;
        margin-bottom: 1.5em;
    }
}

.guides-list {
    display: flex;
    isolation: isolate;
}



.guide {
    @include guide.base-style
}

// MARK: Ministry
.ministry {
    padding-bottom: var(--section-spacing-large);

    .content {
        display: flex;
        flex-direction: column;
        row-gap: 60px;
    }

    .container {
        @include flex-center;
        width: 100%;
        flex-wrap: wrap;
        column-gap: $space-hori-xs;
        row-gap: 1em;

        &:last-child {
            flex-direction: row-reverse;
        }

        &__body {
            display: inline-block;
            flex-basis: 55%;
            flex-grow: 1;
            padding-inline: 1em;
        }

        &__img {
            object-fit: contain;
            flex-grow: 1;
            flex-basis: 40%;
            min-width: 300px;
            max-height: 300px;
        }
    }
}

// MARK: Newsletter
.newsletter-bg {
    $pattern-clr-light: $clr-primary-600;
    $pattern-clr-dark: $clr-primary-700;
    background:
        linear-gradient(135deg, $pattern-clr-dark 21px, $pattern-clr-light 22px, $pattern-clr-light 24px, transparent 24px, transparent 67px, $pattern-clr-light 67px, $pattern-clr-light 69px, transparent 69px),
        linear-gradient(225deg, $pattern-clr-dark 21px, $pattern-clr-light 22px, $pattern-clr-light 24px, transparent 24px, transparent 67px, $pattern-clr-light 67px, $pattern-clr-light 69px, transparent 69px) 0 64px;
    background-color: $pattern-clr-dark;
    background-size: 64px 128px;
}

.newsletter {
    display: flex;
    flex-direction: column;
    align-items: center;
    color: $text-color-light;
    padding-block: var(--section-spacing-large);

    &__section-title,
    &__body {
        color: inherit;
        text-align: center;
    }

    &__body {
        font-size: $fs-600;
    }

    .form {
        display: flex;
        flex-direction: row;
        justify-content: stretch;
        align-items: stretch;
        flex-wrap: wrap;
        margin-top: 60px;
        width: clamp(300px, 80%, 800px);

        input {
            flex-grow: 1;
        }

        .text-input {
            flex: 4 0 auto;
            min-width: min(300px, 100%);
        }
    }
}

// MARK: Files
.files-bg {
    background: $clr-primary-200;
}

.files-grid {
    grid-template-columns: repeat(auto-fill,
            minmax(min(max(350px, 40%), 100%), 1fr));
    gap: $space-hori-s;
}

.file {
    background: $clr-primary-50;
    transition: transform 200ms ease-in-out;

    &__img {
        width: 100%;
        min-height: 70px;
    }

    .container {
        padding: 0.65em 0.5em;
    }

    &__title {
        margin: 0;
        font-size: $fs-400;
        font-weight: bold;
    }

    &:focus,
    &:hover {
        transform: scale(1.05);

        .file__title {
            text-decoration-color: rgba($text-color-dark, 0.8);
            text-underline-offset: 8px;
        }
    }

    &:focus {
        outline: 2px solid $clr-primary-700;
    }
}

// MARK: Message
.send-message {
    padding-block: var(--section-spacing-large);

    .form {
        .inputs {
            grid-template-columns: 2fr 3fr;
            grid-template-rows: repeat(2, max-content);
            gap: $space-vert-s $space-hori-s;

            &__message-input {
                grid-column: 2 / 3;
                grid-row: 1 / -1;

                .text-input {
                    resize: vertical;
                }
            }

            &__name-input {
                align-self: start;
            }

            &__email-input {
                align-self: end;

            }
        }

        &__submit {
            margin-left: auto;
            margin-top: 2em;
            width: fit-content;
            display: block;
        }
    }
}

@media (hover:none) {
    @include guide.no-hover-style;
}

@media screen and (max-width: 1200px) {
    .guide {
        &__title {
            font-size: $fs-500;
        }

        &__desc {
            font-size: $fs-300;
        }
    }
}

@media screen and (max-width: 1000px) {
    .articles-grid {
        grid-template-columns: [main-start] 1fr [main-end];
    }

    .article--main {
        @include article.horizontal-style--override;
    }

}

@media screen and (max-width: 900px) {
    .guides-list {
        flex-direction: column;
    }

    .guide {
        @include guide.collapsed-style;
    }
}

@media screen and (max-width: 800px) {
    .newsletter {
        &__body {
            font-size: $fs-400;
        }
    }

    .send-message .form .inputs {
        grid-template-columns: 1fr;

        &__message-input {
            grid-column: auto;
            grid-row: auto;
            min-height: 180px;
        }
    }
}


@media screen and (max-width: 600px) {
    .actions-grid {
        grid-template-columns: 1fr;
        gap: 20px;
    }

    .action {
        flex-direction: row;

        &__icon {
            width: 60px;
            height: 60px;
        }

        &__title {
            margin: 0 0 0 10px;
            text-align: left;
            font-size: $fs-400;
        }
    }

    .file {
        &__title {
            font-size: $fs-300;
        }
    }
}

@media screen and (max-width: 450px) {
    .file {
        &__title {
            font-size: $fs-200;
        }
    }
}

@media screen and (max-width:400px) {
    .action {
        &__title {
            font-size: $fs-300;
        }
    }
}

// background:
// linear-gradient(324deg, #232927 4%,   transparent 4%) -70px 43px,
// linear-gradient( 36deg, #232927 4%,   transparent 4%) 30px 43px,
// linear-gradient( 72deg, #e3d7bf 8.5%, transparent 8.5%) 30px 43px,
// linear-gradient(288deg, #e3d7bf 8.5%, transparent 8.5%) -70px 43px,
// linear-gradient(216deg, #e3d7bf 7.5%, transparent 7.5%) -70px 23px,
// linear-gradient(144deg, #e3d7bf 7.5%, transparent 7.5%) 30px 23px,

// linear-gradient(324deg, #232927 4%,   transparent 4%) -20px 93px,
// linear-gradient( 36deg, #232927 4%,   transparent 4%) 80px 93px,
// linear-gradient( 72deg, #e3d7bf 8.5%, transparent 8.5%) 80px 93px,
// linear-gradient(288deg, #e3d7bf 8.5%, transparent 8.5%) -20px 93px,
// linear-gradient(216deg, #e3d7bf 7.5%, transparent 7.5%) -20px 73px,
// linear-gradient(144deg, #e3d7bf 7.5%, transparent 7.5%) 80px 73px;
// background-color: #232927;
// background-size: 100px 100px;

